--- a/package.json
+++ b/package.json
@@ -11,18 +11,25 @@
         "@babel/preset-typescript": "^7.10.4",
         "html-inline-css-webpack-plugin": "^1.8.1",
         "html-webpack-plugin": "^4.3.0",
+        "lodash": "^4.17.19",
         "mini-css-extract-plugin": "^0.9.0",
         "react-number-format": "^4.4.1",
         "react-phone-number-input": "^3.0.25"
     },
     "devDependencies": {
         "@babel/core": "^7.11.1",
+        "@babel/plugin-proposal-class-properties": "^7.10.4",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@babel/preset-env": "^7.11.0",
         "@babel/preset-react": "^7.10.4",
         "babel-loader": "^8.1.0",
+        "css-loader": "^4.2.1",
         "html-loader": "^1.1.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "sass": "^1.26.10",
+        "sass-loader": "^9.0.3",
+        "style-loader": "^1.2.1",
         "webpack": "^4.44.1",
         "webpack-cli": "^3.3.12",
         "webpack-dev-server": "^3.11.0"
